--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,20 +11,49 @@
     <header id="header">
       <nav>
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">Sobre Nós</a></li>
-          <li><a href="">Portfólio</a></li>
-          <li><a href="">Contatos</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Sobre Nós</a></li>
+          <li><a href="#">Portfólio</a></li>
+          <li><a href="#">Contatos</a></li>
         </ul>
       </nav>
-    <section id="hero">
-     <div class="tema"></div>
-    </section>
-    <!-- fim Hero -->
-
-    
-      
     </header>
+
+    <section id="hero">
+      <div class="fundo">
+        <img src="img/fundo .png" alt="Imagem de fundo">
+        <div class="texto-hero">
+          <h1> Seja Bem Vindo <span>nome do blog</span>
+         </h1>
+          <p>especializados em informações sobre moda</p>
+        </div>
+      </div>
+    </section>
+
+<!-- seção de conquistas/especializações do blog  -->
+
+<section id="blog">
+<div class="moda">
+<h1>nome do blog</h1>
+<p>Bem-vindo ao nosso universo de estilo, criatividade e identidade. Aqui no nosso blog de moda, acreditamos que cada peça conta uma história — e a moda é uma forma poderosa de expressão.
+
+Este espaço foi criado para inspirar, informar e conectar pessoas apaixonadas por vestir-se com autenticidade. Falamos de tendências, descobrimos novos talentos, exploramos estilos diversos e valorizamos a beleza da moda consciente e inclusiva.
+
+Mais do que roupas, falamos de atitude. Vista-se de quem você é — e acompanhe a gente nessa jornada cheia de cores, texturas e possibilidades.
+
+</p>
+
+
+
+
+</div>
+
+
+
+</section>
+
+
+
     <script src="js/script.js"></script>
   </body>
 </html>
