--- a/index.html
+++ b/index.html
@@ -35,24 +35,23 @@
 <section id="blog">
 <div class="moda">
 <h1>nome do blog</h1>
-<p>Bem-vindo ao nosso universo de estilo, criatividade e identidade. Aqui no nosso blog de moda, acreditamos que cada peça conta uma história — e a moda é uma forma poderosa de expressão.
-
-Este espaço foi criado para inspirar, informar e conectar pessoas apaixonadas por vestir-se com autenticidade. Falamos de tendências, descobrimos novos talentos, exploramos estilos diversos e valorizamos a beleza da moda consciente e inclusiva.
-
-Mais do que roupas, falamos de atitude. Vista-se de quem você é — e acompanhe a gente nessa jornada cheia de cores, texturas e possibilidades.
-
+<p>moda e autentisidade
 </p>
-
-
-
 
 </div>
 
-
-
 </section>
 
+<section id="estaçoes">
+<div class="tempo">
+  <h2>verão</h2>
 
+  <h2>verão</h2>
+
+  <h2>verão</h2>
+</div>
+
+</section>
 
     <script src="js/script.js"></script>
   </body>
