--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,48 +11,20 @@
     <header id="header">
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Sobre Nós</a></li>
-          <li><a href="#">Portfólio</a></li>
-          <li><a href="#">Contatos</a></li>
+          <li><a href="">Home</a></li>
+          <li><a href="">Sobre Nós</a></li>
+          <li><a href="">Portfólio</a></li>
+          <li><a href="">Contatos</a></li>
         </ul>
       </nav>
-    </header>
-
     <section id="hero">
-      <div class="fundo">
-        <img src="img/fundo .png" alt="Imagem de fundo">
-        <div class="texto-hero">
-          <h1> Seja Bem Vindo <span>nome do blog</span>
-         </h1>
-          <p>especializados em informações sobre moda</p>
-        </div>
-      </div>
+     <div class="tema"></div>
     </section>
+    <!-- fim Hero -->
 
-<!-- seção de conquistas/especializações do blog  -->
-
-<section id="blog">
-<div class="moda">
-<h1>nome do blog</h1>
-<p>moda e autentisidade
-</p>
-
-</div>
-
-</section>
-
-<section id="estaçoes">
-<div class="tempo">
-  <h2>verão</h2>
-
-  <h2>verão</h2>
-
-  <h2>verão</h2>
-</div>
-
-</section>
-
+    
+      
+    </header>
     <script src="js/script.js"></script>
   </body>
 </html>
