--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,20 +12,63 @@
     <header id="header">
       <nav>
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">Sobre Nós</a></li>
-          <li><a href="">Portfólio</a></li>
-          <li><a href="">Contatos</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Sobre Nós</a></li>
+          <li><a href="#">Destaques</a></li>
+           <li><a href="#">Coleções</a></li>
+          <li><a href="#">Contatos</a></li>
         </ul>
       </nav>
-    <section id="hero">
-     <div class="tema"></div>
-    </section>
-    <!-- fim Hero -->
-
-    
-      
     </header>
+
+    <section id="hero">
+      <div class="fundo">
+        <img src="img/fundo .png" alt="Imagem de fundo">
+        <div class="texto-hero">
+          <h1> Seja Bem Vindo a <span>Rouge Rebels !</span>
+         </h1>
+          <p>Muito além dos looks: uma voz na moda.</p>
+        </div>
+      </div>
+    </section>
+
+<!-- seção de conquistas/especializações do blog  -->
+
+<section id="blog">
+<div class="moda">
+<h1>Rouge Rebels</h1>
+<p>moda e autentisidade
+</p>
+
+</div>
+
+</section>
+<section id="estilos">
+<div class="tema">
+
+<div class="atual">
+
+<i class="bi bi-star-fill"></i>
+</div>
+
+<div class="looks" >
+
+
+</div>
+<div class="avaliaçoes">
+
+</div>
+
+
+
+
+</div>
+
+
+
+</section>
+
+
     <script src="js/script.js"></script>
   </body>
 </html>
