--- a/index.html
+++ b/index.html
@@ -1,74 +1,81 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <!-- HERO -->
-    <header id="header">
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Sobre Nós</a></li>
-          <li><a href="#">Destaques</a></li>
-           <li><a href="#">Coleções</a></li>
-          <li><a href="#">Contatos</a></li>
-        </ul>
-      </nav>
-    </header>
 
-    <section id="hero">
-      <div class="fundo">
-        <img src="img/fundo .png" alt="Imagem de fundo">
-        <div class="texto-hero">
-          <h1> Seja Bem Vindo a <span>Rouge Rebels !</span>
-         </h1>
-          <p>Muito além dos looks: uma voz na moda.</p>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
+
+  <link rel="stylesheet" href="css/style.css" />
+  <title>Document</title>
+</head>
+
+<body>
+  <!-- HERO -->
+  <header id="header">
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Sobre Nós</a></li>
+        <li><a href="#">Destaques</a></li>
+        <li><a href="#">Coleções</a></li>
+        <li><a href="#">Contatos</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section id="hero">
+    <div class="fundo">
+      <img src="img/fundo .png" alt="Imagem de fundo">
+      <div class="texto-hero">
+        <h1> Seja Bem Vindo a <span>Rouge Rebels !</span>
+        </h1>
+        <p>Muito além dos looks: uma voz na moda.</p>
       </div>
-    </section>
+    </div>
+  </section>
 
-<!-- seção de conquistas/especializações do blog  -->
+  <!-- seção de conquistas/especializações do blog  -->
 
-<section id="blog">
-<div class="moda">
-<h1>Rouge Rebels</h1>
-<p>moda e autentisidade
-</p>
+  <section id="blog">
+    <div class="moda">
+      <h1>Rouge Rebels</h1>
+      <p>moda e autentisidade
+      </p>
 
-</div>
+      <section id="estilos">
+        <div class="tema">
+          <div class="atual">
+            <li>
+              <i class="bi bi-star-fill"></i>
+            </li>
+            <p>Estilos que se destacam</p>
+          </div>
 
-</section>
-<section id="estilos">
-<div class="tema">
-
-<div class="atual">
-
-<i class="bi bi-star-fill"></i>
-</div>
-
-<div class="looks" >
-
-
-</div>
-<div class="avaliaçoes">
-
-</div>
+          <div class="looks">
+            <li>
+              <i class="bi bi-basket-fill"></i>
+            </li>
+            <p>Looks que conquistam</p>
+          </div>
 
 
+          <div class="avaliaçoes">
+
+            <li>
+              <i class="bi bi-bag-heart-fill"></i>
+            </li>
+            <p>Favoritos da nossa comunidade</p>
+          </div>
+        </div>
+      </section>
+
+    </div>
+
+  </section>
 
 
-</div>
+  <script src="js/script.js"></script>
+</body>
 
-
-
-</section>
-
-
-    <script src="js/script.js"></script>
-  </body>
 </html>
