att home e about

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
 
   <link rel="stylesheet" href="css/style.css" />
-  <title>Document</title>
+  <title>Rouge Rebels</title>
 </head>
 
 <body>
@@ -35,45 +35,61 @@
     </div>
   </section>
 
-  <!-- seção de conquistas/especializações do blog  -->
-
-  <section id="blog">
-    <div class="moda">
-      <h1>Rouge Rebels</h1>
-      <p>moda e autentisidade
-      </p>
-
-      <section id="estilos">
-        <div class="tema">
-          <div class="atual">
-            <li>
-              <i class="bi bi-star-fill"></i>
-            </li>
-            <p>Estilos que se destacam</p>
-          </div>
-
-          <div class="looks">
-            <li>
-              <i class="bi bi-basket-fill"></i>
-            </li>
-            <p>Looks que conquistam</p>
-          </div>
-
-
-          <div class="avaliaçoes">
-
-            <li>
-              <i class="bi bi-bag-heart-fill"></i>
-            </li>
-            <p>Favoritos da nossa comunidade</p>
-          </div>
-        </div>
-      </section>
-
+  <!-- SOBRE NÓS -->
+  <section id="sobre">
+    <div class="container">
+      <h2>Sobre Nós</h2>
+      <div class="conteudo-sobre">
+        <img src="img/rouge rebels.png" alt="Equipe Rouge Rebels" />
+        <p>
+          A Rouge Rebels nasceu da vontade de quebrar padrões e oferecer moda com autenticidade.
+          Acreditamos que estilo é expressão pessoal e queremos ser uma plataforma para vozes ousadas e criativas.
+        </p>
+      </div>
     </div>
-
   </section>
 
+
+ <section id="moda">
+  <div class="boho">
+    <img src="img/boho 2.jpg" alt="Look Boho 1">
+    <img src="img/boho3.jpg" alt="Look Boho 2">
+    <img src="img/boho 1.jpg" alt="Look Boho 3">
+  </div>
+</section>
+
+ <!-- DESTAQUES -->
+  <section id="destaques">
+    <div class="container">
+      <h2>Destaques da Moda</h2>
+      <div class="noticias">
+        <div class="noticia">
+          <h3>Tendência 2025: Transparência com atitude</h3>
+          <p>Marcas internacionais apostam em tecidos leves com cortes ousados para o verão.</p>
+        </div>
+        <div class="noticia">
+          <h3>Cor do ano: Vermelho Carmim</h3>
+          <p>Intenso e provocador, o vermelho invade passarelas e ruas com poder.</p>
+        </div>
+        <div class="noticia">
+          <h3>Estilo urbano em alta</h3>
+          <p>Peças oversized, tênis robustos e estampas gráficas dominam o streetwear atual.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+[15:10, 5/28/2025] Ge: <!-- COLEÇÕES -->
+  <section id="colecoes">
+    <div class="container">
+      <h2>Nossas Coleções</h2>
+      <p>Confira uma prévia das coleções mais marcantes da Rouge Rebels para esta temporada:</p>
+      <div class="fotos-colecao">
+        <img src="img/colecao1.jpg" alt="Coleção 1" />
+        <img src="img/colecao2.jpg" alt="Coleção 2" />
+        <img src="img/colecao3.jpg" alt="Coleção 3" />
+      </div>
+    </div>
+  </section>
 
   <script src="js/script.js"></script>
 </body>
