--- a/index.html
+++ b/index.html
@@ -47,6 +47,34 @@
         </p>
       </div>
     </div>
+
+       <div class="row">
+
+                            <div class="col-lg-6">
+
+                                <ul>
+
+                                    <li>
+                                        <i class="bi bi-calendar-check"></i> <strong></strong>
+
+                                        <strong>Inauguração:</strong>
+                                        <span>10/03/2010</span>
+
+                                    </li>
+                                    <li>
+                                        <i class="bi bi-instagram"></i>
+                                        <strong>Instagram:</strong>
+                                        <span>@RaizUrbana</span>
+                                    </li>
+                                    <li>
+                                        <i class="bi bi-whatsapp"></i>
+                                        <strong>telefone:</strong>
+                                        <span>119998765-1970</span>
+                                    </li>
+                                </ul>
+
+                            </div>
+
   </section>
 
 
@@ -56,6 +84,8 @@
     <img src="img/boho3.jpg" alt="Look Boho 2">
     <img src="img/boho 1.jpg" alt="Look Boho 3">
   </div>
+
+  
 </section>
 
  <!-- DESTAQUES -->
@@ -78,7 +108,7 @@
       </div>
     </div>
   </section>
-[15:10, 5/28/2025] Ge: <!-- COLEÇÕES -->
+ <!-- COLEÇÕES -->
   <section id="colecoes">
     <div class="container">
       <h2>Nossas Coleções</h2>
