--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Sobre Nós</a></li>
+        <li><a href="#">Estilos</a></li>
         <li><a href="#">Destaques</a></li>
-        <li><a href="#">Coleções</a></li>
-        <li><a href="#">Contatos</a></li>
+        <li><a href="#">Galeria</a></li>
       </ul>
     </nav>
   </header>
 
-  <section id="hero">
+ <section id="hero">
     <div class="fundo">
       <img src="img/fundo .png" alt="Imagem de fundo">
       <div class="texto-hero">
-        <h1> Seja Bem Vindo a <span>Rouge Rebels !</span>
-        </h1>
-        <p>Muito além dos looks: uma voz na moda.</p>
+        <h1>Seja Bem-Vindo a <span>Rouge Rebels!</span></h1>
+        <p>Muito além das roupas, <span class="typed" data-typed-items="uma voz ativa na moda."></span></p>
       </div>
     </div>
   </section>
 
+   
   <section id="sobre">
     <div class="container">
       <h2>Sobre Nós</h2>
@@ -258,12 +258,15 @@
   <!-- COLEÇÕES -->
   <section id="colecoes">
     <div class="container">
-      <h2>Nossas Coleções</h2>
+      <h2>Galeria Rouge Rebels </h2>
       <p>Confira uma prévia das coleções mais marcantes da Rouge Rebels para esta temporada:</p>
       <div class="fotos-colecao">
         <img src="img/coleçao1.jpg" alt="Coleção 1" />
         <img src="img/coleçao2.jpg" alt="Coleção 2" />
         <img src="img/coleçao3.jpg" alt="Coleção 3" />
+        <img src="img/coleçao4.jpg" alt="Coleção 4" />
+        <img src="img/coleçao5.jpg" alt="Coleção 5" />
+        <img src="img/coleçao6.jpg" alt="Coleção 6" />
       </div>
     </div>
   </section>
@@ -275,42 +278,30 @@
 
     <div class="contato-info">
       <h2>Contato</h2>
-      <p><i class="bi bi-geo-alt"></i> Rua das Flores, 123 - São Paulo, SP</p>
+      <p><i class="bi bi-geo-alt"></i> Rua Papa Gregório Magno, 597</p>
       <p><i class="bi bi-telephone"></i> +55 (11) 99999-9999</p>
       <p><i class="bi bi-envelope"></i> contato@rougerebels.com</p>
     </div>
 
     <div class="localizacao">
-      <h2>Localização</h2>
-      <!-- Exemplo simples de mapa embed (Google Maps ou iframe) -->
-      <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.5554651785644!2d-46.651071184468386!3d-23.565269284688983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59bf4db650c7%3A0xa2a5ae81481a1c2b!2sRua%20das%20Flores%2C%20123%20-%20São%20Paulo%2C%20SP!5e0!3m2!1spt-BR!2sbr!4v1685965493848!5m2!1spt-BR!2sbr" 
-        width="100%" height="180" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
-    </div>
+  <h2>Localização</h2>
+  <iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.345795437138!2d-46.654315684470836!3d-23.55680498467508!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59b87e28ca7f%3A0xe80b1eebd9d86257!2sR.%20Papa%20Greg%C3%B3rio%20Magno%2C%20597%20-%20São%20Paulo%20-%20SP!5e0!3m2!1spt-BR!2sbr!4v1687000000000!5m2!1spt-BR!2sbr"
+    width="100%" height="300"
+    style="border:0; border-radius: 8px; box-shadow: 0 0 10px rgba(230,57,70,0.4);"
+    allowfullscreen="" loading="lazy">
+  </iframe>
+</div>
 
-    <div class="redes-sociais">
-      <h2>Redes Sociais</h2>
-      <div class="icons-sociais">
-        <a href="https://www.instagram.com/rougerebels" target="_blank" aria-label="Instagram">
-          <i class="bi bi-instagram"></i>
-        </a>
-        <a href="https://www.facebook.com/rougerebels" target="_blank" aria-label="Facebook">
-          <i class="bi bi-facebook"></i>
-        </a>
-        <a href="https://twitter.com/rougerebels" target="_blank" aria-label="Twitter">
-          <i class="bi bi-twitter"></i>
-        </a>
-        <a href="https://www.tiktok.com/@rougerebels" target="_blank" aria-label="TikTok">
-          <i class="bi bi-tiktok"></i>
-        </a>
-      </div>
-    </div>
 
-  </div>
 </footer>
 
   <script src="js/script.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+
+
+ 
 </body>
 
 </html>
