--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
   <section id="colecoes">
     <div class="container">
       <h2>Galeria Rouge Rebels </h2>
-      <p>Confira uma prévia das coleções mais marcantes da Rouge Rebels para esta temporada:</p>
+      <p>Confira uma prévia dos estilos  mais marcantes da Rouge Rebels para esta temporada:</p>
       <div class="fotos-colecao">
         <img src="img/coleçao1.jpg" alt="Coleção 1" />
         <img src="img/coleçao2.jpg" alt="Coleção 2" />
